# multivec

./: .gitignore  Makefile  README.md  pyproject.toml
.github/worfklows/: release.yml
.github/workflows/: release.yml
cookbook/: load-augment.ipynb
multivec/: exceptions.py
multivec/data/load/: csv.py  docx.py  html.py  json.py  pdf.py
multivec/eval/: __init__.py
multivec/llm/: anthropic.py  auth.py  base.py  groq.py  openai.py
multivec/providers/: anthropic.py  auth.py  base.py  bedrock.py  embedding.py  groq.py  ollama.py  openai.py  pinecone.py  qdrant.py
multivec/providers/cloud/: aws.py  azure.py
multivec/providers/llm/: anthropic.py  bedrock.py  ollama.py  openai.py
multivec/providers/vector_db/: pinecone.py  qdrant.py
multivec/tool/: __init__.py  base_format.py
multivec/tool/langchain/: pinecone.py  qdrant.py
multivec/utils/: __init__.py  base_format.py
notebooks/: auth.db  encryption.key  exploring.ipynb
tests/: test_core.py
