[tool.poetry]
name = "multivec-ai"
version = "0.1.0"
description = "Supercharge your LLMs with synthetic high-quality multimodal Data"
authors = ["mr-green1337 <islam.hachimi2003@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.8"
pydantic = "^2.9.2"
numpy = "^2.1.1"
pymupdf = "^1.24.10"
ipykernel = "^6.29.5"
boto3 = "^1.35.29"
openai = "^1.50.2"
cryptography = "^43.0.1"
groq = "^0.11.0"
pandas = "^2.2.3"
pinecone = "^5.3.1"
qdrant-client = "^1.11.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
